--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,14 +12,29 @@
 	color: #ffffff;
 }
 
+#color
+{
+	color: #4aaaa5;
+}
 
 
+.image
+{
+	position: relative;
+	width: 300px;
+	height: 200px;
+	margin-bottom: 20px;
+
+}
 
 #image
 {
+	position: relative;
 	float: left;
-	height: 300px;
-	width: 300px;
+	height: 250px;
+	
+
+	
 
 }
 
